--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1>Hello World!</h1>
+<html>
+    <head>
+        <link rel="stylesheet" href="main.css">
+    </head>
+
+    <body>
+        <h1>My Portfolio Site</h1>
+        <button>Do Stuff</button>
+    </body>
+
+    <script src="main.js"></script>
+</html>
