--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
     <body>
         <h1>My Portfolio Site</h1>
+        <h2>Christian Sanchez</h2>
+        <h3>christiansanchez92@gmail.com</h3>
         <button>Do Stuff</button>
     </body>
 
