box model review

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
         <h1>My Portfolio Site</h1>
         <h2>Christian Sanchez</h2>
         <h3>christiansanchez92@gmail.com</h3>
-        <button>Do Stuff</button>
+
+        <div>A</div>
+        <div>B</div>
+        <div>C</div>
+
+        <!-- <button>Do Stuff</button> -->
     </body>
 
     <script src="main.js"></script>
